<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mirego.csmapapplication.activity.CreatePieceActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light"
        android:theme="@android:style/ThemeOverlay.Material.ActionBar"
        android:titleTextAppearance="@style/toolbarTitle"
        android:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/component_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/component"
        android:inputType="textPersonName"
        android:layout_marginTop="3dp" />

    <EditText
        android:id="@+id/type_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        android:layout_marginTop="3dp" />

    <EditText
        android:id="@+id/address_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:layout_marginTop="3dp" />

    <EditText
        android:id="@+id/notes_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:layout_marginTop="3dp" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_piece"
        android:layout_marginTop="3dp" />


</LinearLayout>
